--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,9 @@
 [package]
 edition = "2021"
 name = "scale_generator"
-version = "2.0.0"
+version = "1.0.0"
 
-[dependencies]
+[[bin]]
+bench = false
+path = "src/main.rs"
+name = "scg"
